infra/k8s/deploy.yaml
#@ load("@ytt:template", "template")
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.name
  labels: #@ data.values.defaultLabels
spec:
  replicas: 1
  selector:
    matchLabels:
      deployname: #@ data.values.name
  template:
    metadata:
      labels:
        _: #@ template.replace(data.values.defaultLabels)
        deployname: #@ data.values.name
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: node_type
#@ if data.values.env == 'prod':
                operator: NotIn
#@ else:
                operator: In
#@ end
                values:
                - release_surge
      containers:
      - name: #@ data.values.name
        image: #@ "europe-west3-docker.pkg.dev/healthy-saga-329513/sltech-briq/" + data.values.image_name + ":" + data.values.image_tag
        ports:
        - containerPort: 80
        volumeMounts:
        - name: password
          mountPath: "/etc/nginx/secrets/"
        - name: nginx-conf
          mountPath: /etc/nginx/briq
        resources:
          requests:
            cpu: #@ data.values.resources.nginx.cpu
            memory: #@ data.values.resources.nginx.memory 
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 2
      - name: #@ data.values.name + "-node"
        image: #@ "europe-west3-docker.pkg.dev/healthy-saga-329513/sltech-briq/" + data.values.image_name + "-node:" + data.values.image_tag
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: #@ data.values.resources.node.cpu
            memory: #@ data.values.resources.node.memory
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 2
      volumes:
      - name: password
        secret:
          secretName: adminpassword
      - name: nginx-conf
        configMap:
          name: #@ data.values.name + "-nginx-conf"
