infra/k8s/service.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.name
  labels: #@ data.values.defaultLabels
  annotations:
    cloud.google.com/backend-config: #@ '{"default": "' + data.values.name + '"}'
spec:
  selector:
    deployname: #@ data.values.name
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
