infra/k8s/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: #@ data.values.name
  labels: #@ data.values.defaultLabels
  annotations:
    kubernetes.io/ingress.global-static-ip-name: #@ data.values.static_ip
    networking.gke.io/v1beta1.FrontendConfig: #@ data.values.name
    networking.gke.io/managed-certificates: #@ data.values.name + "-managed-cert"
spec:
  rules:
#@ arr = data.values.sites
#@ for i in arr:
  - host: #@ i
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: #@ data.values.name
            port:
              number: 80
#@ end
